--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "vairables.ts",
   "scripts": {
     "test": "jest --watchAll --no-cache",
-    "ghworkflowtest": "jest"
+    "ghworkflowtest": "jest",
+    "start": "ts-node run.ts"
   },
   "jest": {
     "preset": "ts-jest",
@@ -39,6 +40,7 @@
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
     "xml2js": "^0.6.2"
   }
 }
